# Resume_Analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: analyze.py  auth.py  chat.py  dashboard.py  deps.py  router.py  search.py  upload.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  domain.py
backend/app/repositories/: resumes.py  users.py
backend/app/schemas/: analysis.py  auth.py  resume.py
backend/app/services/: analysis.py  cache.py  chunking.py  embeddings.py  etl.py  rag.py  text_extractors.py
backend/app/tasks/: celery_app.py  resume_tasks.py
backend/tests/: test_analysis.py  test_embeddings.py  test_etl.py
docs/: api.md  checkpoints.md  database.md  deployment.md
frontend/: Dockerfile  jest.config.js  jest.config.ts  netlify.toml  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/search/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: ui.tsx
frontend/lib/: api.ts
frontend/tests/: dashboard.test.tsx
frontend/tests/e2e/: dashboard.spec.ts
infra/terraform/: README.md  main.tf  variables.tf
