[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-resume-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for an AI resume analyzer platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "bcrypt>=4.1.3",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-sdk>=1.25.0",
  "passlib[bcrypt]>=1.7.4",
  "pgvector>=0.3.2",
  "prometheus-client>=0.20.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.3.4",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "qdrant-client>=1.10.1",
  "redis>=5.0.7",
  "sqlalchemy[asyncio]>=2.0.31",
  "structlog>=24.2.0",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.9",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.1"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
